# feishu-dispatcher

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
docs/: claude-code-backend.md  design.md  setup.md
docs/reviews/: 2026-07-17-p0-review.md
feishu_dispatcher/: __init__.py  _lark_compat.py  acp_client.py  card.py  cli.py  config.py  daemon.py  feishu.py  forge.py  livecard.py  llm.py  scheduler.py  store.py  throttler.py
scripts/: capture_acp_meta.py  smoke_acp.py  smoke_claude.py  smoke_llm.py  smoke_opencode.py  smoke_resume.py
tests/: test_acp_extract.py  test_card.py  test_cli.py  test_config.py  test_daemon.py  test_feishu_parse.py  test_forge.py  test_livecard.py  test_scheduler.py  test_store.py  test_throttler.py
