[project]
name = "feishu-dispatcher"
version = "0.0.1"
description = "Feishu-driven personal coding agent dispatcher"
requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.11.0",
    "lark-oapi>=1.7.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[project.scripts]
feishu-dispatcher = "feishu_dispatcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
